# network-assignment

./: .gitignore  README.md  main.py  pyproject.toml  test.py  util.py
src/: util.py
